Add CliAdapter and PersistenceAdapter for Poker example