@@ -15,7 +15,7 @@ public class TestDoubleDeck implements Deck {
   }
 
   public TestDoubleDeck(List<Card> cards) {
-    this.cards = cards;
+    this.cards = new ArrayList<>(cards);
   }
 
   @Override
@@ -28,7 +28,7 @@ public class TestDoubleDeck implements Deck {
     if (isEmpty()) {
       throw new DrawFromEmptyDeckException("Cannot peek at top Card if Deck is empty");
     }
-    return cards.get(0);
+    return cards.getFirst();
   }
 
   @Override
@@ -36,6 +36,11 @@ public class TestDoubleDeck implements Deck {
     if (isEmpty()) {
       throw new DrawFromEmptyDeckException("Cannot burn card if Deck is empty");
     }
-    cards.remove(0);
+    cards.removeFirst();
+  }
+
+  @Override
+  public Deck copy() {
+    return new TestDoubleDeck(cards);
   }
 }
